[tool.poetry]
name = "wulkabot"
version = "0.1.0"
description = "Discord bot to help manage the Wulkanowy Discord server"
authors = ["JelNiSław <jelnislaw@gmail.com>"]
readme = "README.md"
packages = [{ include = "wulkabot" }]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = { git = "https://github.com/Rapptz/discord.py" }
aiohttp = "^3.8.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pyright = "^1.1.251"
pytest = "^7.1.2"

[tool.black]
verbose = true
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pyright]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
