[tool.poetry]
name = "wulkabot"
version = "0.1.0"
description = "Discord bot to help manage the Wulkanowy Discord server"
authors = ["JelNiSlaw <jelnislaw@gmail.com>"]
readme = "README.md"
packages = [{ include = "wulkabot" }]

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.1"
aiohttp = "^3.8"
python-dotenv = "^0.21"

[tool.poetry.dev-dependencies]
black = "^22.10"
isort = "^5.10"
pyright = "^1.1"
pytest = "^7.2"

[tool.black]
verbose = true
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pyright]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
